// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <hr
      class="sc-ikBCnG gIkLUD sc-hiulGA ZixbU"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <hr
      class="sc-ikBCnG gROgll sc-hiulGA ZixbU"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <hr
      class="sc-ikBCnG fRsQsE sc-hiulGA dFOSUw"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO hbUDLW sc-hHopXc ggFlpe sc-hiulGA ZixbU"
    >
      <hr
        class="sc-ikBCnG sc-jJwNel gIkLUD ezhaTT"
        type="dashed"
      />
      <span
        class="sc-fKwCjr fXUfSH sc-ivKoCB kZUNMm"
      >
        some text
      </span>
      <hr
        class="sc-ikBCnG sc-jJwNel gIkLUD ezhaTT"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
